--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <script>
         // Define the message for WhatsApp
-        let whatsappMessage = "Hello Ndeleva 😊!<br>I have just installed your application and indeed it's good 😊.<br>Continue with that spirit Broh😊🤝.<br>My Name is: ";
+        let whatsappMessage = "Hello Ndeleva 😊😊🤝/n My Name is: ";
 
         // Encode the message for URL
         let encodedWhatsAppMessage = encodeURIComponent(whatsappMessage);
