--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <script>
         // Define the message for WhatsApp
-        let whatsappMessage = "Hello Ndeleva 😊😊🤝/n My Name is: ";
+        let whatsappMessage = "Hello Ndeleva 😊😊🤝\nMy Name is: ";
 
         // Encode the message for URL
         let encodedWhatsAppMessage = encodeURIComponent(whatsappMessage);
